lb/etc/envoy/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 1119

tracing:
  http:
    name: envoy.zipkin
    typed_config:
      "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
      collector_cluster: zipkin
      collector_endpoint: "/api/v1/spans"

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 1118
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                generate_request_id: true
                tracing:
                  operation_name: egress
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: test_hosts
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/web"
                          route:
                            cluster: web
                            prefix_rewrite: "/"
                          decorator:
                            operation: LB2WEB
                        - match:
                            prefix: "/env-api"
                          route:
                            cluster: env-api
                            prefix_rewrite: "/"
                          decorator:
                            operation: LB2EnvAPI
                http_filters:
                  - name: envoy.router
                    typed_config: {}

  clusters:
    - name: zipkin
      connect_timeout: 10s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: zipkin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: zipkin_zipkin-container_1
                      port_value: 9411
    - name: web
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: web
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: web_web-sidecar_1
                      port_value: 9998
    - name: env-api
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: env-api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: env-api_env-api-sidecar_1
                      port_value: 8888
